# template-mentat-python

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  setup.py
.github/workflows/: python-checks.yml
.mentat/: precommit.sh  setup.sh
src/hello_world/: main.py
tests/: test_hello_world.py
